# kenny

./: .gitattributes  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  config.h.in  kenny.1  main.c
.circleci/: config.yml
cmake-modules/: CodeCoverage.cmake
